Herokuだと画像ファイルを保存できないのでbase64で保存するように変更
